add external dns + unifi configure cert-manager for local certs through DNS01 challenge add reflector to copy local wildcard certificate

--- a/infra/controllers/network/external-dns/kustomization.yaml
+++ b/infra/controllers/network/external-dns/kustomization.yaml
@@ -16,6 +16,8 @@ secretGenerator:
     namespace: external-dns
     envs:
       - unifi-credentials.env
+    options:
+      disableNameSuffixHash: true
 configMapGenerator:
   - name: external-dns-cloudflare-values
     namespace: external-dns
