--- a/infra/controllers/network/external-dns/unifi-values.yaml
+++ b/infra/controllers/network/external-dns/unifi-values.yaml
@@ -19,6 +19,18 @@ provider:
             key: password
       - name: LOG_LEVEL
         value: debug
+    livenessProbe:
+      httpGet:
+        path: /healthz
+        port: http-wh-metrics
+      initialDelaySeconds: 10
+      timeoutSeconds: 10
+    readinessProbe:
+      httpGet:
+        path: /readyz
+        port: http-wh-metrics
+      initialDelaySeconds: 10
+      timeoutSeconds: 10
 
 logLevel: debug
 
