--- a/infra/controllers/network/external-dns/unifi-values.yaml
+++ b/infra/controllers/network/external-dns/unifi-values.yaml
@@ -22,13 +22,13 @@ provider:
     livenessProbe:
       httpGet:
         path: /healthz
-        port: http-wh-metrics
+        port: 8080
       initialDelaySeconds: 10
       timeoutSeconds: 10
     readinessProbe:
       httpGet:
         path: /readyz
-        port: http-wh-metrics
+        port: 8080
       initialDelaySeconds: 10
       timeoutSeconds: 10
 
