--- a/infra/configs/cert-manager/kustomization.yaml
+++ b/infra/configs/cert-manager/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - letsencrypt-prod.yaml
+  - local-certificate.yaml
 secretGenerator:
   - name: cloudflare-token
     namespace: cert-manager
