add external dns + unifi configure cert-manager for local certs through DNS01 challenge add reflector to copy local wildcard certificate

--- a/apps/arr/qbittorrent/qbittorrent-values.yaml
+++ b/apps/arr/qbittorrent/qbittorrent-values.yaml
@@ -24,6 +24,19 @@ service:
         port: 18863
         protocol: TCP
 
+ingress:
+  main:
+    enabled: true
+    hosts:
+      - host: torrent.local.boomerok.dev
+        paths:
+          path:
+            - path: /
+    tls:
+      - name: local-tls
+        hosts:
+          - torrent.local.boomerok.dev
+
 persistence:
   config:
     enabled: true
