add external dns + unifi configure cert-manager for local certs through DNS01 challenge add reflector to copy local wildcard certificate

--- a/apps/arr/qbittorrent/qbittorrent-values.yaml
+++ b/apps/arr/qbittorrent/qbittorrent-values.yaml
@@ -30,8 +30,8 @@ ingress:
     hosts:
       - host: torrent.local.boomerok.dev
         paths:
-          path:
-            - path: /
+          - path: /
+            pathType: Prefix
     tls:
       - name: local-tls
         hosts:
