add external dns + unifi configure cert-manager for local certs through DNS01 challenge add reflector to copy local wildcard certificate

--- a/apps/arr/qbittorrent/qbittorrent-values.yaml
+++ b/apps/arr/qbittorrent/qbittorrent-values.yaml
@@ -33,7 +33,7 @@ ingress:
           - path: /
             pathType: Prefix
     tls:
-      - name: local-tls
+      - secretName: local-tls
         hosts:
           - torrent.local.boomerok.dev
 
