--- a/apps/arr/qbittorrent/qbittorrent-values.yaml
+++ b/apps/arr/qbittorrent/qbittorrent-values.yaml
@@ -14,7 +14,7 @@ service:
   main:
     type: LoadBalancer
     annotations:
-      io.cilium/lb-ipam-ips: 192.168.1.243
+      io.cilium/lb-ipam-ips: &local 192.168.1.243
     ports:
       http:
         port: 8080
@@ -27,6 +27,8 @@ service:
 ingress:
   main:
     enabled: true
+    annotations:
+      external-dns.alpha.kubernetes.io/target: *local
     hosts:
       - host: torrent.local.boomerok.dev
         paths:
