--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -16,6 +16,16 @@ grafana:
     type: LoadBalancer
     annotations:
       io.cilium/lb-ipam-ips: 192.168.1.230
+  ingress:
+    enabled: true
+    annotations:
+      external-dns.alpha.kubernetes.io/target: 192.168.1.200
+    hosts:
+      - grafana.local.boomerok.dev
+    tls:
+      - secretName: local-tls
+        hosts:
+          - grafana.local.boomerok.dev
   persistence:
     enabled: true
     existingClaim: grafana-pvc
