--- a/infra/controllers/network/traefik/traefik-values.yaml
+++ b/infra/controllers/network/traefik/traefik-values.yaml
@@ -7,15 +7,15 @@ service:
   spec:
     loadBalancerIP: "192.168.1.200"
   additionalServices:
-    local:
-      type: LoadBalancer
-      spec:
-        loadBalancerIP: 192.168.1.222
-        ports:
-          - name: local
-            protocol: TCP
-            port: 443
-            targetPort: local
+#    local:
+#      type: LoadBalancer
+#      spec:
+#        loadBalancerIP: 192.168.1.222
+#        ports:
+#          - name: local
+#            protocol: TCP
+#            port: 443
+#            targetPort: local
     internal:
       spec:
         loadBalancerIP: "192.168.1.201"
