add local service to traefik

--- a/apps/authentik/authentik-values.yaml
+++ b/apps/authentik/authentik-values.yaml
@@ -32,8 +32,7 @@ server:
     ingressClassName: traefik
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
-      traefik.ingress.kubernetes.io/router.entrypoints: websecure
-      traefik.ingress.kubernetes.io/forwarded-headers: "true"
+      traefik.ingress.kubernetes.io/forwarded-headers: 'true'
     hosts:
       - authentik.boomerok.dev
     tls:
