--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -20,6 +20,7 @@ grafana:
     enabled: true
     annotations:
       external-dns.alpha.kubernetes.io/target: 192.168.1.200
+      traefik.ingress.kubernetes.io/router.entrypoints: local
     hosts:
       - grafana.local.boomerok.dev
     tls:
