--- a/apps/arr/qbittorrent/qbittorrent-values.yaml
+++ b/apps/arr/qbittorrent/qbittorrent-values.yaml
@@ -15,6 +15,7 @@ service:
     type: LoadBalancer
     annotations:
       io.cilium/lb-ipam-ips: 192.168.1.243
+      traefik.ingress.kubernetes.io/router.entrypoints: local
     ports:
       http:
         port: 8080
