--- a/apps/arr/sonarr/ingress.yaml
+++ b/apps/arr/sonarr/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: 192.168.1.222
     traefik.ingress.kubernetes.io/router.entrypoints: local
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik-middleware@kubernetescrd
 #    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: traefik
