--- a/apps/arr/sonarr/deployment.yaml
+++ b/apps/arr/sonarr/deployment.yaml
@@ -26,16 +26,16 @@ spec:
               value: '1000'
             - name: GUID
               value: '1000'
-#          volumeMounts:
-#            - mountPath: /config
-#              name: config
+          volumeMounts:
+            - mountPath: /config
+              name: config
 #            - mountPath: /data/media
 #              name: video
-#      volumes:
-#        - name: config
-#          hostPath:
-#            path: /var/openebs/local/data/arr/sonarr
-#            type: DirectoryOrCreate
+      volumes:
+        - name: config
+          hostPath:
+            path: /var/openebs/local/data/arr/sonarr
+            type: DirectoryOrCreate
 #        - name: series
 #          hostPath:
 #            path: /var/openebs/local/media/video/series
