--- a/apps/arr/radarr/deployment.yaml
+++ b/apps/arr/radarr/deployment.yaml
@@ -38,7 +38,7 @@ spec:
           hostPath:
             path: /var/openebs/local/data/arr/radarr
             type: DirectoryOrCreate
-        - name: series
+        - name: movies
           hostPath:
             path: /var/openebs/local/media/video/movies
             type: DirectoryOrCreate
