add authentik middleware to local services

--- a/infra/controllers/network/traefik/traefik-values.yaml
+++ b/infra/controllers/network/traefik/traefik-values.yaml
@@ -28,6 +28,8 @@ ports:
     protocol: TCP
     tls:
       enabled: true
+    middlewares:
+      - traefik-authentik-middleware@kubernetescrd
   web:
     redirectTo:
       port: websecure
