--- a/infra/controllers/observability/loki/loki-values.yaml
+++ b/infra/controllers/observability/loki/loki-values.yaml
@@ -30,12 +30,10 @@ singleBinary:
   affinity:
     podAntiAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          podAffinityTerm:
-            labelSelector:
-              matchLabels:
-                app.kubernetes.io/component: gateway
-            topologyKey: kubernetes.io/hostname
+        - labelSelector:
+            matchLabels:
+              app.kubernetes.io/component: gateway
+          topologyKey: kubernetes.io/hostname
 
 read:
   replicas: 0
