--- a/infra/controllers/observability/loki/loki-values.yaml
+++ b/infra/controllers/observability/loki/loki-values.yaml
@@ -29,8 +29,7 @@ singleBinary:
         type: DirectoryOrCreate
 
 gateway:
-  deploymentStrategy:
-    type: Recreate
+  affinity: {}
 
 read:
   replicas: 0
