--- a/apps/arr/sonarr/deployment.yaml
+++ b/apps/arr/sonarr/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: sonarr
       app: sonarr
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: sonarr
         app: sonarr
     spec:
       containers:
