--- a/infra/controllers/observability/kube-prometheus-stack/volumes/alertmanager-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/alertmanager-pv.yaml
@@ -4,6 +4,7 @@ metadata:
   name: alertmanager-pv
   namespace: observability
   labels:
+    app.kubernetes.io/name: alertmanager
     app: alertmanager
 spec:
   capacity:
