--- a/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pv.yaml
@@ -4,6 +4,7 @@ metadata:
   name: grafana-pv
   namespace: observability
   labels:
+    app.kubernetes.io/name: grafana
     app: grafana
 spec:
   capacity:
