--- a/apps/arr/bazarr/deployment.yaml
+++ b/apps/arr/bazarr/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: bazarr
       app: bazarr
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: bazarr
         app: bazarr
     spec:
       containers:
