--- a/apps/arr/radarr/deployment.yaml
+++ b/apps/arr/radarr/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: radarr
       app: radarr
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: radarr
         app: radarr
     spec:
       containers:
