--- a/apps/arr/sonarr/service.yaml
+++ b/apps/arr/sonarr/service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: sonarr-service
   namespace: arr
   labels:
+    app.kubernetes.io/name: sonarr
     app: sonarr
 spec:
   ports:
@@ -11,4 +12,5 @@ spec:
       targetPort: sonarr
       name: sonarr
   selector:
+    app.kubernetes.io/name: sonarr
     app: sonarr
