--- a/apps/storage/scratch.yaml
+++ b/apps/storage/scratch.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: scratch
       app: scratch
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: scratch
         app: scratch
     spec:
       containers:
