--- a/inactive/node/deployment.yaml
+++ b/inactive/node/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: node
       app: node
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: node
         app: node
     spec:
       containers:
