--- a/inactive/plex/deployment.yaml
+++ b/inactive/plex/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: plex
       app: plex
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: plex
         app: plex
     spec:
       containers:
