--- a/inactive/shitscreen/mitmproxy/deployment.yaml
+++ b/inactive/shitscreen/mitmproxy/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: shitscreen
       app: shitscreen
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: shitscreen
         app: shitscreen
     spec:
       shareProcessNamespace: true
