--- a/inactive/transmission/deployment.yaml
+++ b/inactive/transmission/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: transmission
       app: transmission
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: transmission
         app: transmission
     spec:
       containers:
