--- a/infra/controllers/observability/geoip-updater/deployment.yaml
+++ b/infra/controllers/observability/geoip-updater/deployment.yaml
@@ -6,11 +6,13 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: geoip-updater
       app: geoip-updater
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: geoip-updated
         app: geoip-updater
     spec:
       containers:
