--- a/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pvc.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/grafana-pvc.yaml
@@ -4,6 +4,7 @@ metadata:
   name: grafana-pvc
   namespace: observability
   labels:
+    app.kubernetes.io/name: grafana
     app: grafana
 spec:
   accessModes:
@@ -13,4 +14,5 @@ spec:
       storage: 10Gi
   selector:
     matchLabels:
+      app.kubernetes.io/name: grafana
       app: grafana
