--- a/infra/controllers/storage/postgres/service.yaml
+++ b/infra/controllers/storage/postgres/service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: postgres-external
   namespace: postgres
   labels:
+    app.kubernetes.io/name: postgres
     app: postgres
   annotations:
     io.cilium/lb-ipam-ips: 192.168.1.205
@@ -13,6 +14,7 @@ spec:
     - port: 5432
       targetPort: 5432
   selector:
+    app.kubernetes.io/name: postgres
     app: postgres
 ---
 apiVersion: v1
@@ -21,10 +23,12 @@ metadata:
   name: postgres-service
   namespace: postgres
   labels:
+    app.kubernetes.io/name: postgres
     app: postgres
 spec:
   ports:
     - port: 5432
       targetPort: 5432
   selector:
+    app.kubernetes.io/name: postgres
     app: postgres
