--- a/infra/controllers/storage/postgres/statefulset.yaml
+++ b/infra/controllers/storage/postgres/statefulset.yaml
@@ -6,12 +6,14 @@ metadata:
 spec:
   selector:
     matchLabels:
+      app.kubernetes.io/name: postgres
       app: postgres
   serviceName: postgres-service
   replicas: 1
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: postgres
         app: postgres
     spec:
       containers:
