--- a/apps/homepage/kustomization.yaml
+++ b/apps/homepage/kustomization.yaml
@@ -2,12 +2,21 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - repository.yaml
-  - release.yaml
+  - service-account.yaml
+  - cluster-role.yaml
+  - deployment.yaml
+  - service.yaml
+  - ingress.yaml
 configMapGenerator:
-  - name: homepage-values
+  - name: homepage-config
     namespace: homepage
     files:
-      - values.yaml=homepage-values.yaml
+      - settings.yaml
+      - services.yaml
+      - widgets.yaml
+      - kubernetes.yaml
+    options:
+      labels:
+        app.kubernetes.io/name: homepage
 configurations:
   - kustomizeconfig.yaml
