--- a/talconfig.yaml
+++ b/talconfig.yaml
@@ -1,6 +1,8 @@
 clusterName: perpetulab-cluster
 
+# renovate: datasource=docker depName=ghcr.io/siderolabs/installer
 talosVersion: v1.7.4
+# renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
 kubernetesVersion: v1.30.1
 
 endpoint: https://192.168.1.4:6443
