--- a/infra/controllers/observability/geoip-updater/deployment.yaml
+++ b/infra/controllers/observability/geoip-updater/deployment.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: geoip-updated
+        app.kubernetes.io/name: geoip-updater
         app: geoip-updater
     spec:
       containers:
