--- a/infra/controllers/network/csr-approver/release.yaml
+++ b/infra/controllers/network/csr-approver/release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kubelet-csr-approver
-  namespace: flux-system
+  namespace: kube-system
 spec:
   interval: 30m
   chart:
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: postfinance
-        namespace: flux-system
+        namespace: kube-system
   install:
     remediation:
       retries: 3
