--- a/infra/controllers/network/csr-approver/repository.yaml
+++ b/infra/controllers/network/csr-approver/repository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: postfinance
-  namespace: flux-system
+  namespace: kube-system
 spec:
   interval: 12h
   url: https://postfinance.github.io/kubelet-csr-approver
