update machine disks in resources

--- a/apps/storage/scratch.yaml
+++ b/apps/storage/scratch.yaml
@@ -30,7 +30,7 @@ spec:
       volumes:
         - name: root
           hostPath:
-            path: /var/openebs/local/
+            path: /var/disk/a/
 #        - name: memvol
 #          emptyDir:
 #            medium: Memory
