--- a/inactive/node/deployment.yaml
+++ b/inactive/node/deployment.yaml
@@ -28,5 +28,5 @@ spec:
       volumes:
         - name: node
           hostPath:
-            path: /var/openebs/local/node
+            path: /var/disk/a/node
             type: DirectoryOrCreate
