--- a/infra/controllers/observability/geoip-updater/deployment.yaml
+++ b/infra/controllers/observability/geoip-updater/deployment.yaml
@@ -44,13 +44,13 @@ spec:
           volumeMounts:
             - mountPath: /usr/share/GeoIP
               name: downloads
-            - name: geoip-conf
+            - name: geoip-secrets
               mountPath: /var/GeoIP.conf
               subPath: GeoIP.conf
       volumes:
         - name: geoip-conf
           secret:
-            secretName: geoip-conf
+            secretName: geoip-secrets
         - name: downloads
           hostPath:
             path: /var/disk/a/data/observability/geoip
