--- a/apps/homepage/ingress.yaml
+++ b/apps/homepage/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: homepage-ingress
+  name: homepage
   namespace: homepage
   labels:
     app.kubernetes.io/name: homepage
