--- a/apps/homepage/service.yaml
+++ b/apps/homepage/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: homepage-service
+  name: homepage
   namespace: homepage
   labels:
     app.kubernetes.io/name: homepage
