--- a/apps/homepage/ingress.yaml
+++ b/apps/homepage/ingress.yaml
@@ -13,6 +13,7 @@ metadata:
     gethomepage.dev/group: Cluster Management
     gethomepage.dev/icon: homepage.png
     gethomepage.dev/name: Homepage
+    gethomepage.dev/app: homepage
 spec:
   rules:
     - host: homepage.local.boomerok.dev
