--- a/apps/homepage/ingress.yaml
+++ b/apps/homepage/ingress.yaml
@@ -23,7 +23,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: homepage
+                name: homepage-service
                 port:
                   name: http
   tls:
