--- a/apps/homepage/kustomizeconfig.yaml
+++ b/apps/homepage/kustomizeconfig.yaml
@@ -4,3 +4,4 @@ nameReference:
     fieldSpecs:
       - path: spec/template/spec/volumes/configMap/name
         kind: Deployment
+      - path: spec/template/spec/containers/envFrom/secretRef/name
