--- a/apps/arr/plex/plex-values.yaml
+++ b/apps/arr/plex/plex-values.yaml
@@ -47,6 +47,11 @@ ingress:
   url: https://plex.boomerok.dev
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    gethomepage.dev/enabled: 'true'
+    gethomepage.dev/group: Cluster Management
+    gethomepage.dev/icon: plex
+    gethomepage.dev/name: Plex
+    gethomepage.dev/app: plex-media-server
 
 service:
   type: ClusterIP
