--- a/apps/homepage/config/widgets.yaml
+++ b/apps/homepage/config/widgets.yaml
@@ -16,10 +16,11 @@
     cpu: true
     memory: true
 - unifi_console:
-    url: https://192.168.1.1:8443
+    url: https://192.168.1.1
     username: {{HOMEPAGE_VAR_UNIFI_USER}}
     password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
     site: WhyFi
+    fields: [ "uptime", "wan", "wlan_users" ]
 - search:
     provider: duckduckgo
     target: _blank
