--- a/infra/configs/cilium/network-policy.yaml
+++ b/infra/configs/cilium/network-policy.yaml
@@ -2,6 +2,7 @@ apiVersion: "cilium.io/v2"
 kind: CiliumNetworkPolicy
 metadata:
   name: "l7-visibility"
+  namespace: homepage
 spec:
   endpointSelector:
     matchLabels:
