add network policy to enable l7 visibility in homepage

--- a/infra/controllers/network/cilium/cilium-values.yaml
+++ b/infra/controllers/network/cilium/cilium-values.yaml
@@ -63,9 +63,9 @@ securityContext:
       - SYS_ADMIN
       - SYS_RESOURCE
 
-loadBalancer:
-  l7:
-    backend: envoy
+#loadBalancer:
+#  l7:
+#    backend: envoy
 
 envoy:
   enabled: true
