--- a/infra/configs/cilium/network-policy.yaml
+++ b/infra/configs/cilium/network-policy.yaml
@@ -9,12 +9,16 @@ spec:
       app.kubernetes.io/name: homepage
   egress:
     - toCIDR:
-      - 192.168.1.1/24
+      - 192.168.1.0/24
     - toPorts:
         - ports:
             - port: "80"
               protocol: TCP
+            - port: "8080"
+              protocol: TCP
             - port: "443"
+              protocol: TCP
+            - port: "6443"
               protocol: TCP
           rules:
             http: [{}]
