--- a/apps/homepage/config/widgets.yaml
+++ b/apps/homepage/config/widgets.yaml
@@ -22,6 +22,15 @@
 - search:
     provider: duckduckgo
     target: _blank
+- openmeteo:
+    label: Bielsko-Biała
+    latitude: 49.822081055681224
+    longitude: 19.026997039793688
+    timezone: Europe/Warsaw
+    units: metric
+    cache: 5 # Time in minutes to cache API responses, to stay within limits
+    format: # optional, Intl.NumberFormat options
+      maximumFractionDigits: 1
 - datetime:
     locale: iso
     format:
