--- a/apps/homepage/config/services.yaml
+++ b/apps/homepage/config/services.yaml
@@ -4,16 +4,14 @@
         icon: plex
         widget:
             type: plex
-            url: plex-plex-media-server.arr
-            port: 32400
+            url: http://plex-plex-media-server.arr:32400
             key: {{HOMEPAGE_VAR_PLEX_TOKEN}}
     - Bazarr:
         href: https://bazarr.local.boomerok.dev
         icon: bazarr
         widget:
             type: bazarr
-            url: bazarr-service.arr
-            port: 6767
+            url: http://bazarr-service.arr:6767
             key: {{HOMEPAGE_VAR_BAZARR_APIKEY}}
 
 - Infrastructure:
