--- a/apps/arr/plex/plex-values.yaml
+++ b/apps/arr/plex/plex-values.yaml
@@ -48,7 +48,7 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     gethomepage.dev/enabled: 'true'
-    gethomepage.dev/group: Cluster Management
+    gethomepage.dev/group: The High Seas
     gethomepage.dev/icon: plex
     gethomepage.dev/name: Plex
     gethomepage.dev/app: plex-media-server
