--- a/apps/homepage/config/services.yaml
+++ b/apps/homepage/config/services.yaml
@@ -2,6 +2,8 @@
     - Plex:
         href: https://plex.boomerok.dev
         icon: plex
+        namespace: arr
+        app: plex-media-server
         widget:
             type: plex
             url: http://plex-plex-media-server.arr:32400
@@ -9,6 +11,7 @@
     - Bazarr:
         href: https://bazarr.local.boomerok.dev
         icon: bazarr
+        ping: true
         widget:
             type: bazarr
             url: http://bazarr-service.arr:6767
@@ -23,16 +26,3 @@
             url: https://192.168.1.1
             username: {{HOMEPAGE_VAR_UNIFI_USER}}
             password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
-    - My First Service:
-        href: http://localhost/
-        description: Homepage is awesome
-
-- My Second Group:
-    - My Second Service:
-        href: http://localhost/
-        description: Homepage is the best
-
-- My Third Group:
-    - My Third Service:
-        href: http://localhost/
-        description: Homepage is 😎
