--- a/apps/homepage/config/services.yaml
+++ b/apps/homepage/config/services.yaml
@@ -4,7 +4,6 @@
         icon: plex
         namespace: arr
         app: plex-media-server
-        siteMonitor: http://plex-plex-media-server.arr:32400
         widget:
             type: plex
             url: http://plex-plex-media-server.arr:32400
@@ -12,7 +11,8 @@
     - Bazarr:
         href: https://bazarr.local.boomerok.dev
         icon: bazarr
-        ping: true
+        namespace: arr
+        app: bazarr
         widget:
             type: bazarr
             url: http://bazarr-service.arr:6767
