--- a/renovate.json
+++ b/renovate.json
@@ -26,7 +26,7 @@
     },
     {
       "matchPackageNames": ["qbittorrent"],
-      "versioning": "semver"
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-r(?<build>\\d+)-ls(?<revision>\\d+)"
     },
     {
       "description": ["Talos Group"],
