--- a/apps/arr/qbittorrent/qbittorrent-values.yaml
+++ b/apps/arr/qbittorrent/qbittorrent-values.yaml
@@ -8,7 +8,7 @@ env:
 image:
   # renovate: datasource=docker depName=ghcr.io/linuxserver/qbittorrent versioning=semver
   repository: ghcr.io/linuxserver/qbittorrent
-  tag: 4.6.5
+  tag: 4.6.5-r0-ls335
 
 service:
   main:
