--- a/apps/homepage/config/services.yaml
+++ b/apps/homepage/config/services.yaml
@@ -62,3 +62,9 @@
             url: https://192.168.1.1
             username: {{HOMEPAGE_VAR_UNIFI_USER}}
             password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
+    - Traefik:
+        href: http://192.168.1.201:9000/dashboard/
+        icon: traefik-proxy
+        widget:
+            type: traefik
+            url: http://traefik-internal.traefik:9000/api
