--- a/apps/homepage/config/services.yaml
+++ b/apps/homepage/config/services.yaml
@@ -67,4 +67,4 @@
         icon: traefik-proxy
         widget:
             type: traefik
-            url: http://traefik-internal.traefik:9000/api
+            url: http://traefik-internal.traefik:9000
